--- a/css/style.css
+++ b/css/style.css
@@ -428,7 +428,7 @@ html {
     display: none;
   }
   .hero-decorations__tomat {
-    top: -30px;
+    top: 30px;
     left: 85%;
   }
   .hero-decorations__pasta {
@@ -1069,6 +1069,14 @@ input {
     -webkit-box-ordinal-group: 3;
         -ms-flex-order: 2;
             order: 2;
+  }
+  .footer__end-social-links {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
   }
   .footer__end-social-links a img {
     margin-bottom: 40px;
