--- a/sass/_events.scss
+++ b/sass/_events.scss
@@ -56,19 +56,19 @@
 }
 
 .carousel__item-1 {
-	background: #333 url(/images/carousel-img-1.jpg) no-repeat center/cover ;
+	background: #333 url(../images/carousel-img-1.jpg) no-repeat center/cover ;
 }
 .carousel__item-2 {
-	background:#333 url(/images/carousel-img-1.jpg) no-repeat center/cover ;
+	background:#333 url(../images/carousel-img-1.jpg) no-repeat center/cover ;
 }
 .carousel__item-3 {
-	background:#333 url(/images/carousel-img-1.jpg) no-repeat center/cover ;
+	background:#333 url(../images/carousel-img-1.jpg) no-repeat center/cover ;
 }
 .carousel__item-4 {
-	background:#333 url(/images/top-dishes-1.png) no-repeat center/cover ;
+	background:#333 url(../images/top-dishes-1.png) no-repeat center/cover ;
 }
 .carousel__item-5 {
-	background:#333 url(/images/carousel-img-1.jpg) no-repeat center/cover ;
+	background:#333 url(../images/carousel-img-1.jpg) no-repeat center/cover ;
 	opacity: .2 ;
 }
 
@@ -92,12 +92,12 @@
 //arrows:
 .prev {
 	//border: 2px solid red;
-	background: url(/images/icons/arrow-back.svg) no-repeat left center/13rem; 
+	background: url(../images/icons/arrow-back.svg) no-repeat left center/13rem; 
 	left: 0;
 }
 .next {
 	//border: 2px solid red;
-	background: url(/images/icons/arrow-next.svg) no-repeat right center/13rem; 
+	background: url(../images/icons/arrow-next.svg) no-repeat right center/13rem; 
 	right: 0;
 }
 
