--- a/sass/_try-today.scss
+++ b/sass/_try-today.scss
@@ -13,20 +13,20 @@
   }
 
   &__block-1 { //big
-    background: url(/images/try-today-1.jpg) no-repeat center/cover;
+    background: url(../images/try-today-1.jpg) no-repeat center/cover;
     height: 420px;
     float: left;
   }
 
   &__block-2 {
     margin-bottom: 40px;
-    background: url(/images/try-today-2.jpg) no-repeat center/cover;
+    background: url(../images/try-today-2.jpg) no-repeat center/cover;
     height: 192px;
     float: right;
   }
 
   &__block-3 {
-    background: url(/images/try-today-3.jpg) no-repeat center/cover;
+    background: url(../images/try-today-3.jpg) no-repeat center/cover;
     height: 192px;
     float: right;
   }
